# Estanaris

./: README.md  setup.cfg
Estanaris/: Player.py  app.py  naissance.py
Estanaris/python/: Player.py  naissance.py
Estanaris/rules/: Jobs.ods
Estanaris/static/: script.js  style.css  style1.css
Estanaris/templates/: adventure.html  footer.html  header.html  home.html  naissance.html  profession.html  world_map.html
project/: __init__.py  blog.py  game.py  game_en.py  naissance.py  player.py
project/classes/: naissance.py  player.py  spell.py
project/static/: style.css
project/templates/: base.html
project/templates/game/: adventure.html  language.html  name.html  profession.html  start.html  test.html
project/templates/game/en/: adventure.html  name.html  start.html
project/templates/game_en/: name.html  profession.html  start.html
rules/: .~lock.Jobs.ods#
src/project/: app.py  auth.py  blog.py  db.py  game.py  schema.sql
src/project/classes/: feat.py  item.py  location.py  naissance.py  player.py
src/project/static/chat/: style.css
src/project/templates/blog/: index.html
src/project/templates/game/: map.html
src/project/templates/game/en/: adventure.html  profession.html  start.html
test/: __init__.py  auth.py  chat.py  game.py  project.py
test/classes/: item.py  location.py  npc.py  player.py
test/static/: style.css
test/templates/: base.html  chat.html  room.html
test/templates/blog/: index.html
test/templates/game/: language.html  map.html
test/templates/game/fr/: adventure.html  start.html
(+2 files in other folders)
