[metadata]
name = Estanaris
version = 0.2.4
author = bourgeon
description = Online RPG
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    flask
    flask_socketio
    pillow
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.package_data]
httpy = templates/*.html

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    Estanaris = project.app:main